--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: 每天多一点
-email: heychilde@gmail.com
+email: dq0572255@126.com
 description: 
 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://gitcommit.today"
+url: "http://gitcommit.dailycomments"
 # twitter_username: jekyllrb
-github_username:  childe
+github_username:  ceciet
 
 # Build settings
 markdown: kramdown
